--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rest Countries</title>
 </head>
 <body>
     
 
 <h2>Rest Countries I am Coming to youuuuuuuu</h2>
+<div id="countries" class="countries">
 
 
 
@@ -18,6 +20,15 @@
 
 
 
-<script src="../js/countries.js"></script>
+</div>
+
+
+
+
+
+
+
+
+<script src="countries.js"></script>
 </body>
 </html>
